# actix-web-tutorial

./: Cargo.toml  README.md  docker-compose.yml
migrations/2022-03-12-153552_add_users/: down.sql  up.sql
migrations/2022-04-17-211946_add_post/: up.sql
src/: main.rs  schema.rs
src/auth/: controller.rs  model.rs
src/core/: exception.rs
src/post/: controller.rs  model.rs
src/user/: controller.rs  model.rs
